--- a/remove-tag-html/manifest.json
+++ b/remove-tag-html/manifest.json
@@ -6,7 +6,7 @@
     "background": {
       "service_worker": "background.js"
     },
-    "permissions": ["storage", "activeTab", "scripting"],
+    "permissions": ["storage", "activeTab", "scripting", "webNavigation"],
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
@@ -15,5 +15,11 @@
         "48": "/images/icon_48.png",
         "128": "/images/icon_128.png"
       }
+    },
+    "icons" :{
+      "16": "/images/icon_16.png",
+      "32": "/images/icon_32.png",
+      "48": "/images/icon_48.png",
+      "128": "/images/icon_128.png"
     }
   }
